# user-idle3-rs

./: Cargo.toml  README.md
examples/: get_time.rs
src/: lib.rs  linux_impl.rs  linux_wayland_impl.rs
